package com.master.upm;

public class App
{
    /* Start up */
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
